--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,9 @@ publication_category:
     title: 'Journal Articles'    
   conferences:
     title: 'Conference Papers'
-
+author: 
+  name: "Kelsey Isman"
+  avatar: "kelsey_square"
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
