--- a/_config.yml
+++ b/_config.yml
@@ -21,32 +21,22 @@ repository               : "kelseyisman/kelseyisman.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  avatar           : "kelsey_square"
+  name             : "Kelsey Isman"
+  pronouns         : "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  location         : "Baltimore, MD"
+  employer         : "National Institute on Drug Abuse Intramural Research Program"
+  email            : "kelsey.isman@nih.gov" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  googlescholar    : "https://scholar.google.com/citations?user=HX0UWVsAAAAJ&hl=en&authuser=1"
+  orcid            : "https://orcid.org/0009-0004-3414-9337"
 
   # Repositories and software development
-  bitbucket        : # Username - Update with your username on the site
-  codepen          : # Username
-  dribbble         : # Username
-  github           : "academicpages"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
+  github           : "kelseyisman"
+ 
   # Social media
   bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
@@ -56,22 +46,9 @@ author:
   google_plus      : # Username
   keybase          : # Username
   instagram        : # Username
-  lastfm           : # Username
-  linkedin         : # Username
-  mastodon         : # URL
-  medium           : # URL
-  pinterest        : # Username
-  soundcloud       : # Username
-  steam            : # Username
-  telegram         : # URL
-  tumblr           : # Username
-  twitter          : # Username for X / Twitter
-  vine             : # Username
-  weibo            : # Username
-  wikipedia        : # Username
-  xing             : # Username
-  youtube          : # Username
-  zhihu            : # Username
+
+  linkedin         : "https://www.linkedin.com/in/kelseyisman/"
+
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
