--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ publication_category:
     title: 'Conference Papers'
 author: 
   name: "Kelsey Isman"
-  avatar: "kelsey_square"
+  avatar: "kelsey_square.HEIC"
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
