--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ author:
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
   books:
-    title: 'Books'
+    title: 'Manuscripts Under Review'
   manuscripts:
     title: 'Journal Articles'    
   conferences:
