--- a/_config.yml
+++ b/_config.yml
@@ -191,7 +191,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
-
+  volunteering:
+    output: true
+    permalink: /:collection/:path/
 
 # These settings control how pages and collections are included in the site
 defaults:
@@ -248,8 +250,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
-
-
+# _volunteering
+  - scope:
+      path: ""
+      type: talks
+    values:
+      layout: talk
+      author_profile: true
+      share: true
+      
 # Sass/SCSS
 sass:
   sass_dir: _sass
