--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /talks/       
 
   - title: "Volunteering and Community Engagement"
-    url: /volunteering/
+    url: /portfolio/
     
   - title: "CV"
     url: /cv/
