--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ author:
   avatar           : "kelsey_square.jpg"
   name             : "Kelsey Isman"
   pronouns         : "she/her"  
-  bio              : "Postbaccalaureate IRTA Fellow at the National Institute on Drug Abuse in the Technology and Translational Research Unit"
-  location         : "Baltimore, MD"
-  employer         : "National Institute on Drug Abuse Intramural Research Program"
-  email            : "kelsey.isman@nih.gov" 
+  bio              : "Clinical Psychology PhD Student at Indiana University"
+  location         : "Bloomington, IN"
+  employer         : "Indiana University"
+  email            : "kisman@iu.edu" 
 
   # Academic websites
   googlescholar    : "https://scholar.google.com/citations?user=HX0UWVsAAAAJ&hl=en&authuser=1"
